--- a/Final-Project-Grabner/Final-Project-Grabner/AddTask.resx
+++ b/Final-Project-Grabner/Final-Project-Grabner/AddTask.resx
@@ -129,4 +129,7 @@
   <metadata name="Tasks_T__TableAdapter1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>495, 17</value>
   </metadata>
+  <metadata name="StatusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>678, 17</value>
+  </metadata>
 </root>
